# ai-tech-catchup-agent

./: .env.example  .flake8  .gitignore  CLAUDE.md  Makefile  README.md  config.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ai-tech-catchup.yml  ci.yml  claude-code-actions.yml  claude.yml  daily-report.yml  gemini.yml  genimi.yml  monthly-report.yml  report.yml  topic-report.yml  weekly-default-report.yml  weekly-report.yml
mcp/: mcp_servers.yaml
prompts/: default.yaml  report.yaml  reports.yaml
src/: __init__.py  ai_analyzer.py  claude_search.py  config.py  data_collector.py  github_integration.py  main.py  prompt_manager.py
src/agent/: __init__.py  ai_tech_catchup_agent.py
src/client/: __init__.py  claude_client.py  claude_code_client.py  gemini_client.py  github_client.py  slack_client.py
src/google_adk/: agent.py  main.py  mcp_tools.py
src/utils/: __init__.py  mcp_manager.py  prompt_manager.py
