[project]
name = "ai-tech-catchup-agent"
version = "1.0.0"
description = "最新AI情報キャッチアップ用AI Agent"
authors = [
    {name = "Yusuke Sakai"}
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "anthropic>=0.8.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.flake8]
max-line-length = 150
exclude = [".venv", "venv", "__pycache__", ".git", ".mypy_cache", ".pytest_cache"]

[tool.black]
line-length = 150
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 150
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
